--- a/jblog-view/jblog-web-view/src/main/webapp/resources/css/users.css
+++ b/jblog-view/jblog-web-view/src/main/webapp/resources/css/users.css
@@ -26,3 +26,4 @@
 .users .user .info{margin-left:40px;margin-right:220px;}
 .users .user .info .userlogin{overflow: hidden;}
 .users .user .info .username{font-family: Verdana, sans-serif;font-size: 24px;line-height:24px;margin-bottom:5px;float:left;margin-right:10px;}
+.users .user .info .lifetime{color: #999;font-size: 12px;}
