--- a/jblog-view/jblog-web-view/src/main/webapp/resources/css/main.css
+++ b/jblog-view/jblog-web-view/src/main/webapp/resources/css/main.css
@@ -245,6 +245,8 @@ blockquote {
   background: #F7F7F9;
   padding: 5px;
   border: solid 1px #eee;
+  margin-top: -10px;
+  margin-bottom: -35px;
 }
 
 #submit { 
